Build hero section: set up nav-container with logo and sidebar links side-by-side, make links horizontal with flex and gap, ensure full-width layout with margin: 0 on body, align mid-text with nav-container using padding, and style img-placeholder with flex centering and background

--- a/index.html
+++ b/index.html
@@ -5,28 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="section-hero">
-        <div>Header Logo</div>
-        <div class="link">
-            <ul>
-                <li><a href="#"> header link one</a></li>
-                <li><a href="#"> header link two</a></li>
-                <li><a href="#"> header link three</a></li>
-            </ul>            
+        <div class="nav-container">
+            <div class="Logo">Header Logo</div>
+
+            <div class="sidebar">
+                <ul>
+                    <li><a href="#"> header link one</a></li>
+                    <li><a href="#"> header link two</a></li>
+                    <li><a href="#"> header link three</a></li>
+                </ul>
+            </div>
+
         </div>
 
-        <div>This website is awesome</div>
-        <p>This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast
-        </p>
-        <form>
-            <button type="submit">Sign Up</button>
-        </form>
+        <div class="hero-content">
+            <div class="mid-text">
+                <div class="hero-text">This website is awesome</div>
 
-        <div class="img-placeholder">this is a placeholder for an image</div>
+                <div class="secondary-text">
+                    <p>This website has some subtext that goes here under the main title.
+                        It's a smaller font and the color is lower contrast
+                    </p>
+                </div>
+
+                <form>
+                    <button type="submit">Sign Up</button>
+                </form>
+
+            </div>
+
+            <div class="img-placeholder">this is a placeholder for an image</div>
+        </div>
+
     </div>
 
 </body>
