--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--First section (hero section) of the page-->
     <div class="section-hero">
         <div class="nav-container">
             <div class="Logo">Header Logo</div>
@@ -44,6 +45,33 @@
         </div>
 
     </div>
+
+    <!-- Second Section of the page-->
+    <h1>Some random information.</h1>
+
+    <div class="box-container">
+
+        <div class="box-item">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="box-item">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="box-item">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="box-item">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+
+    </div>
+
+
+
 
 </body>
 
