--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     </div>
 
-    <!-- Second Section of the page-->
+    <!-- Second Section(box section) of the page-->
     <h1>Some random information.</h1>
 
     <div class="box-container">
@@ -67,6 +67,21 @@
             <p>this is some subtext under an illustration or image</p>
         </div>
     </div>
+
+    <!--Third section(quote section) of the page-->
+    <div class="quote-section">
+        <div class="quote-container">
+            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just
+                filling up
+                space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </div>
+            <div class="author-name">-Thor, God of Thunder</div>
+        </div>
+
+    </div>
+
+    <!--Fourth section(Call to action section) of the page-->
+    
 
 </body>
 
