--- a/index.html
+++ b/index.html
@@ -81,7 +81,16 @@
     </div>
 
     <!--Fourth section(Call to action section) of the page-->
-    
+    <div class="CTA-container">
+        <div class="cta-text">
+            <div class="cta-text1">Call to action! It's time!</div>
+            <div class="cta-text2">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <div class="cta-button">
+            <button type="button">Sign Up</button>
+        </div>
+    </div>
+
 
 </body>
 
