--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
         </div>
     </div>
 
+    <!--Footer section-->
+    <div class="footer">
+        Copyright &copy; mahmudul.dev
+    </div>
 
 </body>
 
